--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,15 @@ Keras==1.2.2
 PyYAML==3.12
 Theano==0.8.2
 appdirs==1.4.3
+cycler==0.10.0
+h5py==2.6.0
+matplotlib==2.0.0
 numpy==1.12.0
 packaging==16.8
 protobuf==3.2.0
 pyparsing==2.2.0
+python-dateutil==2.6.0
+pytz==2016.10
 scikit-learn==0.18.1
 scipy==0.19.0
 six==1.10.0
